--- a/java8-in-action/presentation/index.html
+++ b/java8-in-action/presentation/index.html
@@ -42,7 +42,7 @@
 			<div class="slides">
 				<section>
 					<h1>Java 8 in Action</h1>
-					<img width="280" height="200" data-src="assets/java8.png" alt="Up arrow" style="background: transparent;">
+					<img width="300" height="200" data-src="assets/java8.png" alt="Up arrow" style="background: transparent;">
 					<h3>Coding Beer Session</h3>
 					<p>
 						<small>Created by <a href="#">Roman Badura</a> </small>
@@ -53,8 +53,7 @@
 					<h2>Content</h2>
 					<p>
 						<ul>
-							<li>Introduction</li>
-							<li>Functional Interfaces & Lambdas</li>
+							<li>Functions in Java</li>
 							<li>Streams</li>
 							<li>Default Methods</li>
 						</ul>
@@ -65,9 +64,11 @@
 				<section>
 					<section>
 						<h2>Functional Interfaces & Lambdas </h2>
+						<p>Lambdas</p>
 						<p>New view on Java methods.</p>
 						<p>Functional interface (What is it?)</p>
-						<p>Functional descriptor</p>
+						<p>Method references</p>
+						<p></p>
 						<p></p>
 						<br>
 						<a href="#" class="navigate-down">
@@ -81,16 +82,26 @@
 						<p>New View</p>
 					</section>
 					<section>
-						<h2>Functional interface</h2>
-						<pre><code data-trim contenteditable>
-@FunctionalInterface
-public interface Runnable {
-	public abstract void run();
-}
-						</code></pre>
+						<h2>Lambdas</h2>
+						<img width="450" height="160" data-src="assets/lambda_body.png" alt="Up arrow" >
+						<br/>
+						<ul>
+							<li>Anonymous</li> <!-- it doesn't have explicit name like a method-->
+							<li>Function</li> <!-- lambda isn't associated with a particular class like a method -->
+							<li>Passed Around</li><!-- can be passed as argument to a method or stored in variable -->
+							<li>Concise</li><!-- not so much boilerplate code like for anonymous classes -->
+						</ul>
+					</section>
+
+					<section>
+						<h2>Functional interfaces</h2>
 						<p>Only one abstract method.</p>
-						<p>Annotation is not required. (Similar as override)</p>
+						<p>Annotation is not required. (Similar like an override)</p>
 						<p>Interface can contain also default methods.</p>
+						<p>Functional descriptor</p> <!--Signature of the abstract method of the functional interface essentially describes the signature of the lambda expression -->
+						<pre><code data-trim contenteditable>
+() -> System.out.println("Run method");
+						</code></pre>
 						<br>
 
 					</section>
@@ -99,22 +110,81 @@ public interface Runnable {
 
 
 						<pre><code data-trim contenteditable>
-public Funciton&lt;T, R>
-public Predicate&lt;T>
-public Consumer&lt;T>
-public Supplier&lt;T>
-public BinaryOperator&lt;T>
+public Funciton&lt;T, R> { R apply(T t); }
+public Predicate&lt;T> { boolean test(T t); }
+public Consumer&lt;T> { void accept(T t); }
+public Supplier&lt;T> { T get(); }
+public BiFunction&lt;T, U, R> {  R apply(T t, U u); }
 						</code></pre>
 						<p>In package: java.util.function (42-43)</p>
 						<a href="http://docs.oracle.com/javase/8/docs/api/java/util/function/package-summary.html" target="_blank">http://docs.oracle.com/...</a>.
 					</section>
-				</section>
+					<section>
+						<h2>Method references</h2>
+						<p>Reuse existing method definitions</p><!--and pass them just like a lambdas-->
+						<p>More readable</p>
+						<br/>
+						<br/>
+						<!-- it is actually not calling the method (it is a shorthand for lambda expression) -->
+						<table style="font-size: 22px;">
+							<thead>
+							<tr>
+								<th>Lambda</th>
+								<th>Method reference equivalent</th>
+							</tr>
+							</thead>
+							<tbody style="font-size: 18px">
+							<tr>
+								<td>(Apple a) -> a.getWeight()</td>
+								<td>Apple::getWeight</td>
+							<tr>
+							<tr>
+								<td>(str, i) -> str.substring(i)</td>
+								<td>String::substring</td>
+							<tr>
+							<tr>
+								<td>(String s) -> System.out.println(s)</td>
+								<td>System.out::println</td>
+							<tr>
+							</tbody>
+						</table>
+					</section>
+					<section>
+						<h2>How to construct method references</h2>
+						<p>A method reference to a static method</p>
+						<pre><code data-trim contenteditable>
+Integer::parseInt
+						</code></pre>
+						<p>A method reference to an instance of an arbitrary type</p>
+						<pre><code data-trim contenteditable>
+String::length
+						</code></pre>
+						<p>A method reference to an instance method of an existing object</p>
+						<pre><code data-trim contenteditable>
+Transaction expensiveTransaction = Transaction::new;
+expensiveTransaction::getValue
+						</code></pre>
+						<br>
 
+					</section>
+				</section>
 				<section>
-					<h2>Slides</h2>
-					<p>
-						Not a coder? Not a problem. There's a fully-featured visual editor for authoring these, try it out at <a href="http://docs.oracle.com/javase/8/docs/api/java/util/function/package-summary.html" target="_blank">http://docs.oracle.com/...</a>.
-					</p>
+					<section data-transition="slide" data-background="#4d7e65" data-background-transition="zoom">
+						<h2>Streams</h2>
+						<p>
+							What are streams? <!-- update of java Api that lets you manipulate collections of data in a declarative way ( you express query rather than conde an ad hoc implementation for it -->
+						</p>
+						<a href="#" class="navigate-down">
+
+						</a>
+					</section>
+					<section data-transition="slide" data-background="#4d7e65" data-background-transition="zoom">
+						<h2>What are streams?</h2>
+						<p>
+							Fancy iterators over a collection of data
+						</p>
+
+					</section>
 				</section>
 
 				<section>
