--- a/java8-in-action/presentation_final/index.html
+++ b/java8-in-action/presentation_final/index.html
@@ -63,7 +63,6 @@
 	<p>Functional Programming in Java
 	<p>Streams & Collectors</p>
 	<p>Optional & Nashorn & </p>
-	<p></p>
 
 </section>
 
@@ -623,6 +622,8 @@ jjs> print("Hello world");
 	<p>
 
 		- <a href="https://github.com/Alexander10/coding-beer-sessions">Source code</a>
+		</br>
+		- <a href="#">https://github.com/Alexander10/coding-beer-sessions.git</a>
 	</p>
 </section>
 
